--- a/src/_includes/components/hero.html
+++ b/src/_includes/components/hero.html
@@ -23,18 +23,7 @@
     z-index: 1;
     display: none;
   }
-  #hero-2219 .cs-image-group::before {
-    content: "";
-    width: 22.375em;
-    height: auto;
-    background: var(--secondary);
-    opacity: 0.2;
-    display: block;
-    position: absolute;
-    top: 9em;
-    bottom: 11.125em;
-    left: 5.5em;
-  }
+  
   #hero-2219 .cs-picture {
     position: absolute;
   }
@@ -103,7 +92,7 @@
     /* top changes to 100px on tablet */
     /* bottom 60px - 180px */
     padding: 8.5rem 2rem clamp(3.75rem, 12vw, 11.25rem);
-    padding-top: 200px;
+ 
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -209,22 +198,23 @@
     top: 0;
     left: 0;
     z-index: 1;
-    background-color: var(--primaryDark);
+    background-color:#C1C0A7;
   }
   #hero-2219 .cs-background img {
     width:auto;
-   height: 100vh;
-   min-height: 790px;
+    height: 95vh;
+  
     object-fit: cover;
+  object-position: bottom right;
     margin:0px 0px 0px 0px;
-    opacity: .5;
+    opacity: .8;
   }
   #hero-2219 .cs-background::before {
     content: "";
     width: 100%;
     height: 95vh;
-    background: linear-gradient(0deg, #000 20%, rgba(0,0, 0, 0.00) 58.94%, rgba(0, 0, 0, .05) 96.68%);
-opacity: .0;
+    background: linear-gradient(-180deg, #000 10%, rgba(0,0, 0, 0.90) 58.94%, rgba(0, 0, 0, .99) 96.68%);
+opacity: .7;
     position: absolute;
     top: 0;
     left: 0;
@@ -251,7 +241,7 @@ opacity: .0;
     align-items: flex-start;
     min-height: 500px;
     margin: 0px;
-    padding-top: 200px;
+    
   }
 
   #hero-2219 .cs-author {
@@ -299,7 +289,7 @@ right: 0px;
     box-sizing: content-box;
     /* 16px - 170px */
     margin: 0px 0px;
-    padding-top: 200px;
+    
     max-width: 500px;
     
   }
@@ -307,8 +297,8 @@ right: 0px;
   #hero-2219 .cs-background {height: 85vh; min-height: 200px; overflow: hidden;}
   #hero-2219 .cs-background img {
     width:100%;
-   height: 110vh;
-   min-height: 930px;
+   height: 710px;
+   min-height: 100px;
     object-fit: cover;
     margin:0px 0px 0px 0px;
   }
@@ -379,14 +369,14 @@ right: 5%;
       </div>
 
 
-
-        <h2 class="cs-topper" data-aos="fade-up" style="color: var(--primaryLight);">Tenacious Gutter Systems</h1>
-          <h1 class="cs-title" data-aos="fade-up">Houston Gutter Experts</h1>
+      <h1 class="cs-title" data-aos="fade-up" >Dog Boarding, </h1>
+        <h2 class="cs-topper" data-aos="fade-up" style="color: #98EAEE;">Daycare, and Playtime Fun in St. Clair Shores, MI!</h1>
+         
     
           <p class="cs-text">
-            From installation to cleaning, we provide hassle free, high quality gutter solutions to protect your home from costly water damage.   
+            Looking for the best dog boarding or daycare near you? At American Pets Inn, we provide personalized care, temperament based playgroups, and a loving environment your pets will adore.   
             </p>
-          <a style="margin-top: 30px;" href="tel:{{client.phoneForTel}}" class="cs-button-solid">Call: 281-744-1986</a>
+          <a style="margin-top: 30px;" href="tel:{{client.phoneForTel}}" class="cs-button-solid">Call:  586 778-0000</a>
            
 
       
