--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -9,11 +9,11 @@
 /* CodeStitch Root and Helpers */
 @media only screen and (min-width: 0em) {
   :root {
-    --primaryLight: #FF7B3F;
-    --primary: #FF7B3F;
+    --primaryLight: #0137F3;
+    --primary: #0137F3;
     --primaryDark: black;
-    --headerScroll: black;
-    --mobileNav: black;
+    --headerScroll: white;
+    --mobileNav: white;
     --callBg: black;
     --secondary:white;
     --secondaryLight: #001f3f;
@@ -79,7 +79,7 @@
     font-size: 1.2rem;
     line-height: 22px;
     font-weight: bold;
-    color: black;
+    color: white;
     text-align: center;
   }
   .cs-button-solid:hover {
