--- a/src/_includes/components/header_withbg.html
+++ b/src/_includes/components/header_withbg.html
@@ -29,14 +29,14 @@
             width: 49.1875rem;
            
            
-            max-width: 15rem;
+            max-width: 170px;
         
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             z-index: 10;
-            
+            border-radius: 999px;
             overflow: hidden;
            
         }
@@ -101,7 +101,7 @@
             width: 100%;
             /* prevents padding and border from affecting height and width */
             box-sizing: border-box;
-
+background-color: white;
             position: fixed;
             z-index: 10000;
         }
@@ -120,6 +120,7 @@
             transition:
                 width 0.3s,
                 opacity 0.3s;
+                background-color: white;
         }
 
         #cs-navigation.cs-active .cs-ul-wrapper {
@@ -417,6 +418,7 @@
             display: block;
             padding: 0px 30px;
         }
+        #cs-navigation {background-color: white;}
 
         #cs-navigation .cs-dropdown {
             position: relative;
@@ -488,6 +490,7 @@
         #cs-navigation .cs-dropdown {
             position: relative;
         }
+        #cs-navigation {background-color: white; padding: 10px;}
 
         #cs-navigation .cs-dropdown:hover {
             cursor: pointer;
@@ -639,7 +642,7 @@
 
         #cs-navigation {
             width: 100%;
-            padding: 0;
+        
             /* prevents padding and border from affecting height and width */
             box-sizing: border-box;
 
@@ -696,7 +699,7 @@
             justify-content: center;
             align-items: center;
             z-index: 100;
-           
+            border-radius: 999px;
             overflow: hidden;
         }
 
@@ -896,7 +899,7 @@
                 </div>
             </div>
         </nav>
-        <a href="" class="cs-button-solid cs-nav-button">Contact Us</a>
+        <a href="" class="cs-button-solid cs-nav-button">Get A Quote</a>
         <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
         <!-- <button id="dark-mode-toggle" aria-label="dark mode toggle">
             <svg class="cs-moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 480" style="enable-background:new 0 0 480 480" xml:space="preserve"><path d="M459.782 347.328c-4.288-5.28-11.488-7.232-17.824-4.96-17.76 6.368-37.024 9.632-57.312 9.632-97.056 0-176-78.976-176-176 0-58.4 28.832-112.768 77.12-145.472 5.472-3.712 8.096-10.4 6.624-16.832S285.638 2.4 279.078 1.44C271.59.352 264.134 0 256.646 0c-132.352 0-240 107.648-240 240s107.648 240 240 240c84 0 160.416-42.688 204.352-114.176 3.552-5.792 3.04-13.184-1.216-18.496z"/></svg>
