--- a/src/_includes/components/hero.html
+++ b/src/_includes/components/hero.html
@@ -328,7 +328,8 @@ right: 5%;
    /* 16px - 170px */
    margin: 0px auto;
    padding-top: 150px;
-   max-width: 1200px;
+   padding-right: 500px;
+   max-width: 900px;
    
  }
 }
@@ -369,8 +370,8 @@ right: 5%;
       </div>
 
 
-      <h1 class="cs-title" data-aos="fade-up" >Dog Boarding, </h1>
-        <h2 class="cs-topper" data-aos="fade-up" style="color: #98EAEE;">Daycare, and Playtime Fun in St. Clair Shores, MI!</h1>
+      <h1 class="cs-title" data-aos="fade-up" >Dog Boarding, Daycare, & Playtime Fun!</h1>
+        <h2 class="cs-topper" data-aos="fade-up" style="color: #98EAEE;">in St. Clair Shores, MI</h1>
          
     
           <p class="cs-text">
