--- a/src/_includes/components/hero.html
+++ b/src/_includes/components/hero.html
@@ -368,10 +368,10 @@ right: 5%;
               <img loading="lazy" decoding="async" src="/assets/images/5.jpg" alt="children's birthday" width="218" height="155">
           </picture>
       </div>
-
+      <h2 class="cs-topper" data-aos="fade-up" style="color: #98EAEE;">St. Clair Shores, MI</h1>
 
       <h1 class="cs-title" data-aos="fade-up" >Dog Boarding, Daycare, & Playtime Fun!</h1>
-        <h2 class="cs-topper" data-aos="fade-up" style="color: #98EAEE;">in St. Clair Shores, MI</h1>
+     
          
     
           <p class="cs-text">
