--- a/src/_includes/components/hero.html
+++ b/src/_includes/components/hero.html
@@ -306,6 +306,14 @@ right: 0px;
 }
 
 @media only screen and (min-width:1280px) {
+
+  #hero-2219 .cs-background img {
+
+   height: 100vh;
+   min-height: 100px;
+
+  }
+
   #hero-2219 .cs-image-group {
 
 right: 1%;
