--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -69,7 +69,7 @@
     position: relative;
     text-transform: none;
     display: inline-block;
-    background-color: var(--primaryLight);
+    background-color: #FFBA19;
     width: auto;
     border: 4px solid white;
     padding: 20px 30px;
@@ -79,7 +79,7 @@
     font-size: 1.2rem;
     line-height: 22px;
     font-weight: bold;
-    color: white;
+    color: black;
     text-align: center;
   }
   .cs-button-solid:hover {
