--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -80,7 +80,7 @@
         position: relative;
         text-transform: none;
         display: inline-block;
-        background-color: var(--primaryLight);
+        background-color: #FFBA19;
         width: auto;
         border:4px solid white;
         padding: 20px 30px;
@@ -91,7 +91,7 @@
         line-height: 22px;
         font-weight: bold;
         // Transition Properties
-        color: white;
+        color: black;
         
         text-align: center;
 
