--- a/src/_includes/components/herostats.html
+++ b/src/_includes/components/herostats.html
@@ -68,11 +68,12 @@ z-index: 9999;
         position: relative;
         margin: 0;
         padding: 0;
+        margin-bottom: 30px;
         display: flex;
         text-align: left;
         justify-content: flex-start;
         align-items: left;
-        flex-wrap: wrap;
+        
     }
     #stats-340 .cs-picture {
         /* 60px - 80px */
