--- a/src/_includes/components/hero.html
+++ b/src/_includes/components/hero.html
@@ -2,405 +2,212 @@
 <!--                    Hero                      -->
 <!-- ============================================ -->
 
+
 <style>
   /*-- -------------------------- -->
 <---           Hero             -->
 <--- -------------------------- -*/
-
 /* Mobile - 360px */
-#hero-2219 .cs-title {max-width: 100%;}
-
 @media only screen and (min-width: 0rem) {
-
-
-  #hero-2219 .cs-image-group {
-    /* scales the whole group based on the view width size and stop when that vales equals .74em, resets at desktop */
-    font-size: min(2.32vw, .74em);
-    width: 39.375em;
-    height: 40.9375em;
-    display: block;
-    position: relative;
-    z-index: 1;
-    display: none;
-  }
-  
-  #hero-2219 .cs-picture {
-    position: absolute;
-  }
-  #hero-2219 .cs-picture img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  #hero-2219 .cs-picture1 {
-    width: 19.0625em;
-    height: auto;
-    border: 4px solid #FFFFFF;
-    top: 0;
-    bottom: 17.5625em;
-    left: 0;
-  }
-  #hero-2219 .cs-picture2 {
-    width: 25.8125em;
-    height: auto;
-    border: 4px solid #FFFFFF;
-    top: 16.9375em;
-    right: 0;
-    bottom: 0;
-  }
-  #hero-2219 .cs-picture3 {
-    width: 13.625em;
-    height: 9.6875em;
-    top: 5.25em;
-    right: 4.6875em;
-    border: 4px solid #FFFFFF;
-  }
-
-  #hero-2219 .cs-graphic {
-    width: 101%;
-   
-    height: auto;
-    object-fit: cover;
-    position: absolute;
-    bottom: -1px;
-    left: 50%;
-    z-index: 2;
-    transform: translateX(-50%);
-  }
-  #hero-2219 {
+  #hero-2041 {
     background-color: #000;
+    /* 200px - 300px - top leaving extra space for the navigation */
+    /* 60px - 100px bottom */
+    padding: clamp(12.5rem, 25.95vw, 11.75em) 1rem clamp(3.75rem, 7.82vw, 6.25rem);
+    /* prevents the topper line from causing an overflow */
     overflow: hidden;
     position: relative;
-    z-index: 998;
-    
+    z-index: 1;
+    min-height: 150vh;
   }
-  #hero-2219 .cs-container {
+  #hero-2041 .cs-container {
     width: 100%;
-    
+    max-width: 80rem;
     margin: auto;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    /* 48px - 64px */
-    gap: clamp(3rem, 7vw, 4rem);
-    position: relative;
+    align-items: center;
+    flex-wrap: wrap;
+    /* 60px - 180px */
+    gap: clamp(3.75rem, 13vw, 11.25rem);
   }
-  #hero-2219 .cs-content {
-    /* top changes to 100px on tablet */
-    /* bottom 60px - 180px */
-    padding: 8.5rem 2rem clamp(3.75rem, 12vw, 11.25rem);
- 
+  #hero-2041 .cs-content {
+    text-align: center;
+    width: 100%;
+    max-width: 53.125rem;
+    /* prevents padding from affecting height and width */
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    z-index: 99;
+    align-items: center;
+    position: relative;
+    z-index: 1;
   }
-  #hero-2219 .cs-author {
+  
+  #hero-2041 .cs-title {
+    /* 39px - 80px */
+    font-size: clamp(2.1375rem, 6vw, 4rem);
+    max-width: 20ch;
+    text-transform: uppercase;
+    color: var(--bodyTextColorWhite);
+  }
+  #hero-2041 .cs-text {
+    max-width: 35.25rem;
+    margin-bottom: 2rem;
+    font-size: 1.3rem;
+    color: var(--bodyTextColorWhite);
+  }
+  
+  #hero-2041 .cs-form {
+    width: 100%;
+    margin: 0;
+    padding: 1rem;
+    background-color: #fff;
+    box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.08);
+    border-radius: 0.5rem;
     display: flex;
     flex-direction: column;
-    gap: 0.25rem;
+    /* 16px - 20px */
+    gap: clamp(1rem, 2.3vw, 1.25rem);
   }
-  #hero-2219 .cs-name {
-    font-size: 1.5625rem;
+  #hero-2041 .cs-label {
+    font-size: 1rem;
     font-weight: 700;
     line-height: 1.2em;
-    color: var(--bodyTextColorWhite);
-    display: block;
-  }
-  #hero-2219 .cs-job {
-    font-size: 1rem;
-    line-height: 1.2em;
-    margin: 0 0 1rem;
-    color: var(--bodyTextColorWhite);
-    display: block;
-  }
-  #hero-2219 .cs-title {
-    /* 49px - 61px */
-    font-size: clamp(2.3625rem, 6vw, 3.8125rem);
-
-    color: var(--bodyTextColorWhite);
-  }
-  #hero-2219 .cs-text {
-    /* 16px - 20px */
-    font-size: clamp(1.2rem, 2vw, 1.25rem);
-
-    color: var(--bodyTextColorWhite);
-  }
-  #hero-2219 .cs-video-group {
-    width: 100%;
-    /* 180px - 320px */
-    height: clamp(11.25rem, 40vw, 20rem);
-    /* 48px - 80px */
-    margin-top: clamp(3rem, 11vw, 5rem);
+    color: var(--headerColor);
     display: flex;
-    justify-content: flex-end;
-    position: relative;
+    flex-direction: column;
+    gap: 0.5rem;
   }
-  #hero-2219 .cs-video-group:hover {
-    cursor: pointer;
+  #hero-2041 .cs-flex {
+    display: inline-flex;
+    justify-content: flex-start;
+    gap: 0;
   }
-  #hero-2219 .cs-video-group:hover .cs-play {
-    transform: translateY(-50%) scale(1.1);
+  #hero-2041 .cs-color {
+    color: #ff4747;
   }
-  #hero-2219 .cs-video-group video,
-  #hero-2219 .cs-video-group .cs-picture {
-    width: 100%;
-    height: 100%;
-    display: block;
-  }
-  #hero-2219 .cs-video-group video img,
-  #hero-2219 .cs-video-group .cs-picture img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  #hero-2219 .cs-wrapper {
-    width: 88%;
-    position: relative;
-    z-index: 1;
-  }
-  #hero-2219 .cs-play {
-    /* 80px - 120px */
-    width: clamp(5rem, 10vw, 7.5rem);
-    height: auto;
-    padding: 0;
-    background-color: transparent;
+  #hero-2041 .cs-input {
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.5em;
+    padding: 1rem;
+    background-color: #f7f7f7;
+    color: #767676;
     border: none;
-    pointer-events: none;
-    position: absolute;
-    top: 50%;
-    left: calc(clamp(5rem, 10vw, 7.5rem)*-0.5);
-    transform: translateY(-50%);
-    transform-origin: center;
-    transition: transform 0.3s, opacity 0.3s;
+    border-radius: 0.5rem;
   }
-  #hero-2219 .cs-play:hover {
-    cursor: pointer;
+  #hero-2041 .cs-submit {
+    width: max-content;
+    align-self: center;
   }
-  #hero-2219 .cs-play.cs-hide {
-    opacity: 0;
-    transform: translateY(-50%) scale(0);
-  }
-  #hero-2219 .cs-play img {
+  #hero-2041 .cs-background {
     width: 100%;
-    height: 100vh;
-    object-fit: cover;
-    overflow: hidden;
-  }
-  #hero-2219 .cs-background {
-    width: 100%;
-    height: 99vh;
-    min-height: 750px;
+    height: 66%;
+    display: block;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
-    background-color:#C1C0A7;
+    z-index: -2;
+    background-color: black;
   }
-  #hero-2219 .cs-background img {
-    width:auto;
-    height: 95vh;
-  
-    object-fit: cover;
-  object-position: bottom right;
-    margin:0px 0px 0px 0px;
-    opacity: .8;
-  }
-  #hero-2219 .cs-background::before {
+  #hero-2041 .cs-background:before {
+    /* Overlay */
     content: "";
     width: 100%;
-    height: 95vh;
-    background: linear-gradient(-180deg, #000 10%, rgba(0,0, 0, 0.90) 58.94%, rgba(0, 0, 0, .99) 96.68%);
-opacity: .7;
+    height: 100%;
+   
+    background: linear-gradient(0deg, #000 15%, rgba(0,0, 0, 0.00) 58.94%, rgba(0, 0, 0, .05) 96.68%);
+    /* prevents the cursor from interacting with it */
+    pointer-events: none;
+    opacity: 0.98;
+    display: block;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 9999;
+    z-index: 1;
+  }
+  #hero-2041 .cs-background img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: black;
+    opacity: .5;
   }
 }
-
-
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
-  #hero-2219 .cs-number {text-align: center;}
-
-  #hero-2219 .cs-background img {
-    width:auto;
-   height: 100vh;
-   min-height: 870px;
-    object-fit: cover;
-    margin:0px 0px 0px calc(50% - 750px);
+  #hero-2041 .cs-form {
+    flex-direction: row;
+    align-items: flex-end;
   }
-  #hero-2219 .cs-content {
-    text-align: left;
- 
-    padding-top: 9.25rem;
-    align-items: flex-start;
-    min-height: 500px;
-    margin: 0px;
-    
+  #hero-2041 .cs-submit {
+    /* causes the submit button to grow to it's "auto" width and shrinks the inputs. this makes everything fit within cs-form */
+    flex: 1 0 auto;
+    align-self: flex-end;
   }
-
-  #hero-2219 .cs-author {
-    position: absolute;
-    /* 60px - 120px */
-    bottom: clamp(3.75rem, 12vw, 7.5rem);
-    left: 7.5rem;
-  }
-  #hero-2219 .cs-job {
-    margin: 0;
-  }
-}
-  @media only screen and (min-width: 780px) {
-  #hero-2219 .cs-background img {
-    width:auto;
-   height: 100vh;
-   min-height: 870px;
-    object-fit: cover;
-    margin:0px 0px 0px calc(50% - 500px);
-  }
-
-  
-
-}
-/* Large Desktop - 1300px */
-@media only screen and (min-width: 60.25rem) {
-  #hero-2219 .cs-image-group {
-position: absolute;
-right: 0px;
-    display: block;
-  }
-  #hero-2219 .cs-graphic {
+  #hero-2041 .cs-label {
     width: 100%;
-   
-    height: auto;
-    object-fit: cover;
-    position: absolute;
-    bottom: -1px;
-    left: 50%;
-    z-index: 2;
-    transform: translateX(-50%);
+    min-width: 0;
   }
-  #hero-2219 .cs-content {
-  width: 99%;
-    box-sizing: content-box;
-    /* 16px - 170px */
-    margin: 0px 0px;
-    
-    max-width: 500px;
-    
+  #hero-2041 .cs-background {
+    height: 84%;
   }
-  #hero-2219 {height: 90vh;}
-  #hero-2219 .cs-background {height: 100vh; min-height: 200px; overflow: hidden;}
-  #hero-2219 .cs-background img {
-    width:100%;
-   height: 710px;
-   min-height: 100px;
-    object-fit: cover;
-    margin:0px 0px 0px 0px;
-  }
-
 }
-
-@media only screen and (min-width:1280px) {
-
-  #hero-2219 .cs-background img {
-
-   height: 100vh;
-   min-height: 100px;
-
-  }
-
-  #hero-2219 .cs-image-group {
-
-right: 1%;
-
-  }
- #hero-2219 .cs-graphic {
-   width: 100%;
+/* Large Desktop - Parallax Effect - 1600px */
+@media only screen and (min-width: 100rem) {
+  #hero-2041 .cs-background {
   
-   height: auto;
-   object-fit: cover;
-   position: absolute;
-   bottom: -1px;
-   left: 50%;
-   z-index: 2;
-   transform: translateX(-50%);
- }
- #hero-2219 .cs-content {
- width: 80%;
-   box-sizing: content-box;
-   /* 16px - 170px */
-   margin: 0px auto;
-   padding-top: 150px;
-   padding-right: 500px;
-   max-width: 800px;
+    background: url("/assets/images/bg1.jpg");
+    opacity: .6;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
+  #hero-2041 .cs-background img {
+    display: none;
+  
+  }
+
+  #hero-2041 .cs-background:before {
+    /* Overlay */
    
- }
+    background: linear-gradient(0deg, #000 15%, rgba(0,0, 0, 0.00) 58.94%, rgba(0, 0, 0, .05) 96.68%);
+    /* prevents the cursor from interacting with it */
+
+    opacity: 0.28;
+  }
 }
                                 
 </style>
 
-<section id="hero-2219">
-  <svg class="cs-graphic cs-graphic-light" width="1920" height="188" viewBox="0 0 1920 188" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-    <path d="M1920 45.8671C1835.33 45.8671 1715.47 60.6671 1549.2 104.534C1115.6 218.4 932.267 0.000366211 466.533 0.000366211C218.933 0.000366211 172.8 45.8671 0.133333 45.8671L0 187.934H1920V45.8671Z" fill="#fff"></path>
-  </svg>
+<section id="hero-2041">
   <div class="cs-container">
       <div class="cs-content">
-        <div class="cs-image-group">
-          <!--Top left image-->
-          <picture class="cs-picture cs-picture1">
-              <!--Mobile Image-->
-              <source media="(max-width: 600px)" srcset="/assets/images/2.jpg">
-              <!--Tablet and above Image-->
-              <source media="(min-width: 601px)" srcset="/assets/images/2.jpg">
-              <img loading="lazy" decoding="async" src="/assets/images/2.jpg" alt="wedding photoshoot" width="297" height="366">
-          </picture>
-          <!--Bottom right image-->
-          <picture class="cs-picture cs-picture2">
-              <!--Mobile Image-->
-              <source media="(max-width: 600px)" srcset="/assets/images/4.jpg">
-              <!--Tablet and above Image-->
-              <source media="(min-width: 601px)" srcset="/assets/images/4.jpg">
-              <img loading="lazy" decoding="async" src="/assets/images/4.jpg" alt="photograph of a woman" width="405" height="376">
-          </picture>
-          <!--Middle image-->
-          <picture class="cs-picture cs-picture3">
-              <!--Mobile Image-->
-              <source media="(max-width: 600px)" srcset="/assets/images/5.jpg">
-              <!--Tablet and above Image-->
-              <source media="(min-width: 601px)" srcset="/assets/images/5.jpg">
-              <img loading="lazy" decoding="async" src="/assets/images/5.jpg" alt="children's birthday" width="218" height="155">
-          </picture>
+          <span class="cs-topper">Abstract Contruction LLC</span>
+          <h1 class="cs-title">Commercial Construction + Home <span style="color:#4EEF1A">&</span> Business Remodeling</h1>
+          <p class="cs-text">Your project deserves more than a standard contractor. It deserves vision, expertise, and craftsmanship that outshines the rest. While others stick to templates, we create custom, high end solutions that set new standards in construction and design.</p>
+          <a href="" class="cs-button-10" aria-label="read more about us">
+            Free Quote 618.771.0767
+            <svg class="cs-icon" aria-hidden="true" width="30" height="24" viewBox="0 0 30 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M14.83 11.29L10.59 7.05001C10.497 6.95628 10.3864 6.88189 10.2646 6.83112C10.1427 6.78035 10.012 6.75421 9.88 6.75421C9.74799 6.75421 9.61729 6.78035 9.49543 6.83112C9.37357 6.88189 9.26297 6.95628 9.17 7.05001C8.98375 7.23737 8.87921 7.49082 8.87921 7.75501C8.87921 8.0192 8.98375 8.27265 9.17 8.46001L12.71 12L9.17 15.54C8.98375 15.7274 8.87921 15.9808 8.87921 16.245C8.87921 16.5092 8.98375 16.7626 9.17 16.95C9.26344 17.0427 9.37426 17.116 9.4961 17.1658C9.61794 17.2155 9.7484 17.2408 9.88 17.24C10.0116 17.2408 10.1421 17.2155 10.2639 17.1658C10.3857 17.116 10.4966 17.0427 10.59 16.95L14.83 12.71C14.9237 12.617 14.9981 12.5064 15.0489 12.3846C15.0997 12.2627 15.1258 12.132 15.1258 12C15.1258 11.868 15.0997 11.7373 15.0489 11.6154C14.9981 11.4936 14.9237 11.383 14.83 11.29Z" fill="white"/>
+                <path d="M20.83 11.29L16.59 7.05001C16.497 6.95628 16.3864 6.88189 16.2646 6.83112C16.1427 6.78035 16.012 6.75421 15.88 6.75421C15.748 6.75421 15.6173 6.78035 15.4954 6.83112C15.3736 6.88189 15.263 6.95628 15.17 7.05001C14.9838 7.23737 14.8792 7.49082 14.8792 7.75501C14.8792 8.0192 14.9838 8.27265 15.17 8.46001L18.71 12L15.17 15.54C14.9838 15.7274 14.8792 15.9808 14.8792 16.245C14.8792 16.5092 14.9838 16.7626 15.17 16.95C15.2634 17.0427 15.3743 17.116 15.4961 17.1658C15.6179 17.2155 15.7484 17.2408 15.88 17.24C16.0116 17.2408 16.1421 17.2155 16.2639 17.1658C16.3857 17.116 16.4966 17.0427 16.59 16.95L20.83 12.71C20.9237 12.617 20.9981 12.5064 21.0489 12.3846C21.0997 12.2627 21.1258 12.132 21.1258 12C21.1258 11.868 21.0997 11.7373 21.0489 11.6154C20.9981 11.4936 20.9237 11.383 20.83 11.29Z" fill="white"/>
+            </svg>
+        </a>
+                            
+          <!--Bottom Corners-->
       </div>
-      <h2 class="cs-topper" data-aos="fade-up" style="color: #98EAEE;">St. Clair Shores, MI</h2>
-
-      <h1 class="cs-title" data-aos="fade-up" >Dog Boarding, Daycare, & Playtime Fun!</h1>
      
-         
-    
-          <p class="cs-text">
-            Looking for the best dog boarding or daycare near you? At American Pets Inn, we provide personalized care, temperament based playgroups, and a loving environment your pets will adore.   
-            </p>
-          <a style="margin-top: 30px;" href="tel:{{client.phoneForTel}}" class="cs-button-solid">Call:  586 778-0000</a>
-           
 
-      
-      </div>
-      
-     
-      <picture class="cs-background">
-        
-          <!--Mobile Image-->
-          <source media="(max-width: 600px)" srcset="/assets/images/bg.jpg">
-          <!--Tablet and above Image-->
-          <source media="(min-width: 601px)" srcset="/assets/images/bg.jpg">
-          <img loading="lazy" decoding="async" src="/assets/images/bg.jpg" alt="photographer" width="1280" height="568">
-      </picture>
-      
-  </div>
-
+  <!-- Background Image -->
+  <picture class="cs-background">
+      <source media="(max-width: 600px)" srcset="/assets/images/bg1.jpg">
+      <source media="(min-width: 601px)" srcset="/assets/images/bg1.jpg">
+      <img loading="lazy" decoding="async" src="/assets/images/bg1.jpg" alt="meeting" width="1920" height="1200" aria-hidden="true">
+  </picture>
 </section>
+                              
