--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -10,8 +10,8 @@
 @media only screen and (min-width: 0em) {
     // Website colors
     :root {
-        --primaryLight:  #0137F3;
-        --primary: #0137F3;
+        --primaryLight:  #4eef1a;
+        --primary: #4eef1a;
         --primaryDark: black;
         --headerScroll: white;
         --mobileNav: white;
@@ -45,7 +45,7 @@
         font-size: var(--topperFontSize);
         line-height: 1.2em;
         font-weight: 700;
-        color: var(--primaryDark);
+        color: #41EE0D;
         text-align: inherit;
     }
 
@@ -72,58 +72,47 @@
         text-align: inherit;
     }
 
-    // Button - can be replaced using CodeStitch's "Button" Stitches
-    .cs-button-solid:hover { box-shadow: -0px -2px 0px rgba(0, 0, 0, 0.2);}
-    .cs-button-solid {
-        box-shadow: 7px 7px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
-        position: relative;
-        text-transform: none;
-        display: inline-block;
-        background-color: #FFBA19;
-        width: auto;
-        border:4px solid white;
-        padding: 20px 30px;
-        text-decoration: none;
-    border-radius: 999px;
-    font-family: "Poppins";
-        font-size: calc(16 / 16 * 1.2rem);
-        line-height: 22px;
-        font-weight: bold;
-        // Transition Properties
-        color: black;
-        
+    .cs-button-10 {
         text-align: center;
-
-        &:hover {
-            color: black;
-            &:before {
-                width: 100%;
-                opacity: 1;
-               
-            }
-        }
-
-        &:before {
-            z-index: -1;
-            position: absolute;
-            top: 0;
-            left: 0;
-            content: "";
-            opacity: 1;
-            display: block;
-            background-color: #fff;
-            height: 100%;
-            border:2px solid black;
-            opacity: 0;
-            border-radius: 999px;
-
-            //Transition properties
-            width: 0;
-            transition: width 0.1s;
-        }
+        font-size: 1rem;
+        /* 46px - 56px */
+        line-height: clamp(2.875rem, 8vw, 3.5rem);
+        text-decoration: none;
+        font-weight: 700;
+        min-width: 10.875rem;
+        margin: auto;
+        color: #fff;
+        padding: 0 2rem;
+        /* prevents padding and border from affecting height and width */
+        box-sizing: border-box;
+        background-color: var(--primary);
+        color:black;
+        box-shadow: 4px 4px 0px 0px #1a1a1a;
+        display: inline-flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 0.25rem;
+        position: relative;
+        z-index: 1;
+        transform: skew(-10deg);
+        transition:
+            background-color 0.3s,
+            box-shadow 0.3s;
     }
-}
+    .cs-button-10 .cs-icon {
+        transition: transform 0.3s;
+    }
+    .cs-button-10:hover {
+        background-color: #1a1a1a;
+        box-shadow: 4px 4px 0px 0px var(--primary);
+    }
+    .cs-button-10:hover .cs-icon {
+        transform: translateX(0.25rem);
+    }
+    
+                                    
+    }
+
 
 /* Fonts and general styles */
 @media only screen and (min-width: 0em) {
