--- a/src/_includes/components/hero.html
+++ b/src/_includes/components/hero.html
@@ -46,8 +46,8 @@
   
   #hero-2041 .cs-title {
     /* 39px - 80px */
-    font-size: clamp(2.1375rem, 6vw, 4rem);
-    max-width: 20ch;
+    font-size: clamp(2.1375rem, 6vw, 3.5rem);
+    max-width: 1200px;
     text-transform: uppercase;
     color: var(--bodyTextColorWhite);
   }
@@ -188,7 +188,7 @@
 <section id="hero-2041">
   <div class="cs-container">
       <div class="cs-content">
-          <span class="cs-topper">Abstract Contruction LLC</span>
+          <span class="cs-topper">Abstract Construction St. Louis, MO</span>
           <h1 class="cs-title">Commercial Construction + Home <span style="color:#4EEF1A">&</span> Business Remodeling</h1>
           <p class="cs-text">Your project deserves more than a standard contractor. It deserves vision, expertise, and craftsmanship that outshines the rest. While others stick to templates, we create custom, high end solutions that set new standards in construction and design.</p>
           <a href="" class="cs-button-10" aria-label="read more about us">
