--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -105,6 +105,7 @@
     .cs-button-10:hover {
         background-color: #1a1a1a;
         box-shadow: 4px 4px 0px 0px var(--primary);
+        color:white;
     }
     .cs-button-10:hover .cs-icon {
         transform: translateX(0.25rem);
