--- a/src/_includes/components/hero.html
+++ b/src/_includes/components/hero.html
@@ -13,7 +13,7 @@
     background-color: #000;
     /* 200px - 300px - top leaving extra space for the navigation */
     /* 60px - 100px bottom */
-    padding: clamp(12.5rem, 25.95vw, 11.75em) 1rem clamp(3.75rem, 7.82vw, 6.25rem);
+    padding: clamp(9.5rem, 25.95vw, 11.75em) 1rem clamp(3.75rem, 7.82vw, 6.25rem);
     /* prevents the topper line from causing an overflow */
     overflow: hidden;
     position: relative;
@@ -188,7 +188,7 @@
 <section id="hero-2041">
   <div class="cs-container">
       <div class="cs-content">
-          <span class="cs-topper">Abstract Construction St. Louis, MO</span>
+          <span class="cs-topper">St. Louis, MO & Surrouning Area</span>
           <h1 class="cs-title">Commercial Construction + Home <span style="color:#4EEF1A">&</span> Business Remodeling</h1>
           <p class="cs-text">Your project deserves more than a standard contractor. It deserves vision, expertise, and craftsmanship that outshines the rest. While others stick to templates, we create custom, high end solutions that set new standards in construction and design.</p>
           <a href="" class="cs-button-10" aria-label="read more about us">
