--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -12,7 +12,7 @@
     --primaryLight: #4eef1a;
     --primary: #4eef1a;
     --primaryDark: black;
-    --headerScroll: white;
+    --headerScroll: black;
     --mobileNav: white;
     --callBg: black;
     --secondary:white;
