--- a/src/_includes/components/cta_button.html
+++ b/src/_includes/components/cta_button.html
@@ -1,1 +1,1 @@
-<a class="cs-button-solid" href="tel:{{client.phoneForTel}}">Schedule a Tow in Seconds</a>
+<DIV style="margin: 0px 0px; text-align: center;"><a class="cs-button-solid" style="margin: auto;" href="tel:{{client.phoneForTel}}">Get A Free Custom Quote</a></DIV>
