--- a/src/_includes/components/2.html
+++ b/src/_includes/components/2.html
@@ -1,120 +1,148 @@
 <!-- ============================================ -->
-<!--              Side By Side Reverse            -->
+<!--             Side By Side Reverse             -->
 <!-- ============================================ -->
+
+
 <style>
-    /*-- -------------------------- -->
+  /*-- -------------------------- -->
 <---   Side By Side Reverse     -->
 <--- -------------------------- -*/
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-  #sbsr-2217 {
+  #sbsr-2289 {
     padding: var(--sectionPadding);
-    padding-top: 0px;
-    background-color: #FFF;
     overflow: hidden;
-    position: relative;
-    z-index: 1;
+    background-color: #fafafa;
   }
-  #sbsr-2217 .cs-container {
+  #sbsr-2289 .cs-container {
     width: 100%;
     /* changes to 1280px at desktop */
     max-width: 36.5rem;
     margin: auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    /* 48px - 64px */
-    gap: clamp(3rem, 6vw, 4rem);
+    justify-content: center;
+    align-items: flex-start;
+    gap: 3rem;
   }
-  #sbsr-2217 .cs-content {
+  #sbsr-2289 .cs-content {
     /* set text align to left if content needs to be left aligned */
     text-align: left;
     width: 100%;
-    max-width: 36.625rem;
     display: flex;
     flex-direction: column;
     /* centers content horizontally, set to flex-start to left align */
     align-items: flex-start;
+    position: relative;
+    z-index: 10;
   }
-  #sbsr-2217 .cs-text {
-    margin-bottom: 1.5rem;
+  #sbsr-2289 .cs-text {
+    margin-bottom: 1rem;
   }
-  #sbsr-2217 .cs-list {
-    margin: 0 0 2rem 0;
+  #sbsr-2289 .cs-text:last-of-type {
+    margin-bottom: 2rem;
+  }
+  #sbsr-2289 .cs-features {
+    width: 100%;
+    margin: 0 0 2rem;
+    /* 24px - 32px */
+    padding: clamp(1.5rem, 4vw, 2rem);
+    background-color: #fef5f4;
+    border-left: 0.25rem solid var(--secondary);
+  }
+  #sbsr-2289 .cs-h3 {
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1.5em;
+    margin: 0 0 0.75rem;
+    color: var(--headerColor);
+  }
+  #sbsr-2289 .cs-ul {
+    font-size: 0.75rem;
+    margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    /* 24px - 32px */
-    gap: clamp(1.5rem, 3vw, 2rem);
+    gap: 0.75rem;
   }
-  #sbsr-2217 .cs-li {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 1.5rem;
-  }
-  #sbsr-2217 .cs-icon-wrapper {
-    /* 60px - 80px */
-    width: clamp(3.75rem, 7vw, 5rem);
-    height: clamp(3.75rem, 7vw, 5rem);
-    border: 1px solid #bababa;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex: none;
-  }
-  #sbsr-2217 .cs-icon {
-    width: 2rem;
-    height: auto;
-    display: block;
-  }
-  #sbsr-2217 .cs-h3 {
-    /* 20px - 25px */
-    font-size: clamp(1.25rem, 2.5vw, 1.5625rem);
-    font-weight: 700;
-    line-height: 1.2em;
-    text-align: left;
-    margin: 0 0 0.75rem 0;
-    color: var(--headerColor);
-  }
-  #sbsr-2217 .cs-li-text {
-    /* 14px - 16px */
-    font-size: clamp(0.875rem, 1.8vw, 1rem);
+  #sbsr-2289 .cs-li {
+    font-size: 1rem;
     line-height: 1.5em;
-    text-align: left;
-    margin: 0;
+    list-style: none;
+    /* 20px - 24px */
+    padding-left: clamp(1.25rem, 3vw, 1.5rem);
     color: var(--bodyTextColor);
+    position: relative;
   }
-  #sbsr-2217 .cs-image-group {
-    /* scales the whole group based on the view width size and stop when that vales equals .74em, resets at desktop */
-    font-size: min(2.32vw, .74em);
-    width: 39.375em;
-    height: 40.9375em;
+  #sbsr-2289 .cs-li::before {
+    content: "";
+    width: 0.5rem;
+    height: 0.5rem;
+    margin-top: 0.5rem;
+    background-color: var(--secondary);
     display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: rotate(45deg);
+  }
+  #sbsr-2289 .cs-button-solid {
+    font-size: 1rem;
+    font-weight: 700;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+    text-align: center;
+    text-decoration: none;
+    min-width: 9.375rem;
+    margin: 0;
+    /* prevents padding from adding to the width */
+    box-sizing: border-box;
+    padding: 0 1.5rem;
+    background-color: var(--primary);
+    color: #1a1a1a;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    transition: color 0.3s;
+  }
+  #sbsr-2289 .cs-button-solid:before {
+    content: "";
+    width: 0%;
+    height: 100%;
+    background: #000;
+    opacity: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: width 0.3s;
+  }
+  #sbsr-2289 .cs-button-solid:hover {
+    color: #fff;
+  }
+  #sbsr-2289 .cs-button-solid:hover:before {
+    width: 100%;
+  }
+  #sbsr-2289 .cs-image-group {
+    width: 100%;
+    height: 126vw;
+    max-height: 39.125rem;
+    display: block;
+    order: -1;
     position: relative;
     z-index: 1;
   }
-  #sbsr-2217 .cs-image-group::before {
-    content: "";
-    width: 22.375em;
-    height: auto;
-    background: var(--secondary);
-    opacity: 0.2;
+  #sbsr-2289 .cs-picture {
+    /* big background image */
+    width: 100%;
     display: block;
     position: absolute;
-    top: 9em;
-    bottom: 11.125em;
-    left: 5.5em;
+    top: 0;
+    bottom: 5.9375rem;
+    left: 0;
   }
-  #sbsr-2217 .cs-picture {
-    position: absolute;
-  }
-  #sbsr-2217 .cs-picture img {
+  #sbsr-2289 .cs-picture img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -122,119 +150,124 @@
     top: 0;
     left: 0;
   }
-  #sbsr-2217 .cs-picture1 {
-    width: 19.0625em;
-    height: auto;
-    border: 4px solid #FFFFFF;
-    top: 0;
-    bottom: 17.5625em;
-    left: 0;
-  }
-  #sbsr-2217 .cs-picture2 {
-    width: 25.8125em;
-    height: auto;
-    border: 4px solid #FFFFFF;
-    top: 16.9375em;
-    right: 0;
-    bottom: 0;
-  }
-  #sbsr-2217 .cs-picture3 {
-    width: 13.625em;
-    height: 9.6875em;
-    top: 5.25em;
-    right: 4.6875em;
-  }
-  #sbsr-2217 .cs-graphic {
-    /* 131px - 255px */
-    width: clamp(5.8175rem, 15vw, 15.9375rem);
-    height: auto;
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: -1;
-  }
- 
-}
-/* Small Desktop - 1024px */
-@media only screen and (min-width: 64rem) {
-
-    
-  #sbsr-2217 .cs-container {
-    max-width: 80rem;
-    flex-direction: row;
+  #sbsr-2289 .cs-box {
+    text-align: left;
+    width: 91%;
+    max-width: 28.125rem;
+    /* prevents padding and border from affecting height and width */
+    box-sizing: border-box;
+    /* 24px - 32px */
+    padding: clamp(1.5rem, 3vw, 2rem);
+    background-color: #fffcf3;
+    display: inline-flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: stretch;
+    align-items: flex-start;
+    column-gap: 1.5rem;
+    row-gap: 0.5rem;
+    position: absolute;
+    right: 50%;
+    bottom: 0;
+    z-index: 10;
+    transform: translate(50%);
   }
-  #sbsr-2217 .cs-content {
-    width: 47%;
-    align-self: center;
+  #sbsr-2289 .cs-number {
+    /* 31px - 49px */
+    font-size: clamp(1.9375rem, 4vw, 3.0625rem);
+    font-weight: 700;
+    line-height: 1.2em;
+    text-transform: uppercase;
+    margin: 0;
+    color: var(--General-Secondary, #ffc219);
   }
-  #sbsr-2217 .cs-li {
+  #sbsr-2289 .cs-heading {
+    font-size: 1.25rem;
+    font-weight: 700;
+    line-height: 1.2em;
+    margin: 0 0 0.5rem;
+    color: var(--headerColor);
+  }
+  #sbsr-2289 .cs-desc {
+    font-size: 1rem;
+    line-height: 1.5em;
+    color: var(--bodyTextColor);
+  }
+  #sbsr-2289 .cs-graphic {
+    width: 150%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: -1;
+    transform: translate(-50%, -50%);
+  }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #sbsr-2289 .cs-box {
+    flex-direction: row;
     align-items: center;
   }
-  #sbsr-2217 .cs-image-group {
-    font-size: min(1.2vw, 1em);
+}
+/* Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+  #sbsr-2289 .cs-container {
+    max-width: 80rem;
+    flex-direction: row;
+    align-items: stretch;
+    gap: 1.25rem;
+  }
+  #sbsr-2289 .cs-content {
+    padding-right: 3.25rem;
+    padding-bottom: 6.75rem;
+  }
+  #sbsr-2289 .cs-image-group {
     height: auto;
-    flex: none;
-    order: 2;
+    min-height: 40.125rem;
+    max-height: 100%;
+    order: initial;
+  }
+  #sbsr-2289 .cs-picture {
+    bottom: 4rem;
   }
 }
                                 
 </style>
-<section id="sbsr-2217">
-    <div class="cs-container">
-        <div class="cs-image-group">
-            <!--Top left image-->
-            <picture class="cs-picture cs-picture1">
-                <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/2.jpg">
-                <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/2.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/2.jpg" alt="wedding photoshoot" width="297" height="366">
-            </picture>
-            <!--Bottom right image-->
-            <picture class="cs-picture cs-picture2">
-                <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/4.jpg">
-                <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/4.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/4.jpg" alt="photograph of a woman" width="405" height="376">
-            </picture>
-            <!--Middle image-->
-            <picture class="cs-picture cs-picture3">
-                <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/5.jpg">
-                <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/5.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/5.jpg" alt="children's birthday" width="218" height="155">
-            </picture>
-        </div>
-        <div class="cs-content">
-        
-            <h2 class="cs-title">About  {{client.address.city}}'s Best  {{client.service}} Company</h2>
-            <p class="cs-text">
-              We are a dedicated and professional team committed to delivering exceptional services to clients in {{client.address.city}} and the surrounding areas. With our extensive expertise and attention to detail, we specialize in providing high quality solutions tailored to meet your unique needs and enhance your experience.               <div style="display: flex; gap: 20px; margin: 10px 0px 30px;">
-                <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M48 24C48 10.7438 37.2562 0 24 0C10.7438 0 0 10.7438 0 24C0 35.9813 8.775 45.9094 20.25 47.7094V30.9375H14.1562V24H20.25V18.7125C20.25 12.6984 23.8313 9.375 29.3156 9.375C31.9406 9.375 34.6875 9.84375 34.6875 9.84375V15.75H31.6594C28.6781 15.75 27.75 17.6016 27.75 19.5V24H34.4062L33.3422 30.9375H27.75V47.7094C39.225 45.9094 48 35.9813 48 24Z" fill="#1877F2"/>
-                    <path d="M33.3422 30.9375L34.4062 24H27.75V19.5C27.75 17.6016 28.6781 15.75 31.6594 15.75H34.6875V9.84375C34.6875 9.84375 31.9406 9.375 29.3156 9.375C23.8313 9.375 20.25 12.6984 20.25 18.7125V24H14.1562V30.9375H20.25V47.7094C21.4734 47.9016 22.725 48 24 48C25.275 48 26.5266 47.9016 27.75 47.7094V30.9375H33.3422Z" fill="white"/>
-                    </svg>
 
-                    <svg width="48" height="48" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 750 750"><defs><style>.cls-1{fill:#76d40e;}.cls-2{fill:#fff;}.cls-3{fill:none;}</style></defs><title>nextdoor-logo-freelogovectors.net</title><path class="cls-1" d="M366.71,19.45H386.9c79,4.38,157.75,32.31,218.11,84.31,80.33,66.39,127.77,170,126.46,274.14.12,88.69-35.78,176.47-96.71,240.69-64,68.1-155,107.81-248,112H362.1c-84.76-4.67-168.39-37.38-230.11-96.26C62.76,571.66,22.77,480.24,18.5,387.46V357.08c5.92-85.33,40.5-169.3,101.72-229.83C183.93,60.41,275,23.09,366.71,19.45"/><path class="cls-2" d="M364.6,228.51c-41.86,5.69-82.08,31.8-98.07,71.85-23.55-14.16-35.1-40.9-36.12-67.52-27-.51-53.88,0-80.78-.57-3.19,66.1,45.28,126.8,107.29,146.09,0,48.52-1.26,97.16.68,145.69,27.36-.57,54.78.39,82.14-1-.85-54.16-.17-108.37-.45-162.53-.4-16,4.1-32.71,15.64-44.26,20-22.35,58.83-23.15,79.59-1.42,12.63,11.89,17.86,29.47,17.64,46.42.34,54.16-.18,108.31.11,162.47,27.36.12,54.72.06,82.09.06-.12-56.32.23-112.58-.12-168.9,0-33.74-10.58-68.95-36.12-92.22-34.59-34.3-87.27-40.78-133.52-34.19Z"/><rect class="cls-3" width="750" height="750"/></svg>
+<section id="sbsr-2289">
+  <div class="cs-topper" data-aos="fade-up" style="margin: 100px auto; color: #999; font-weight: 100; text-align: center; text-transform: none;">Your Business Deserves a Better Construction Experience</div>
+  <div class="cs-container">
+      <!-- Left Content Section-->
+      <div class="cs-content">
+       
+          </span>
+       <DIV class="cs-title" style="margin-bottom: 30px;">High quality, transparent,<span style="color: var(--primary);"> &</span> efficient building solutions</DIV>
+          <p class="cs-text">
+            Outdated, inefficient, or poorly designed spaces can hurt productivity, reduce tenant appeal, and increase maintenance costs.
+            <BR><BR>
+            At Abstract Construction LLC, we specialize in commercial construction, tenant office renovations, industrial development, and electrical services bringing decades of high end craftsmanship to businesses across St. Louis, Missouri.
+                      </p>
 
 
-                    <svg style="border:1px solid #ccc; border-radius:999px;" width="48" height="48" viewBox="4 5 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z" fill="white"/>
-                        <path d="M24 17.6213C25.9529 17.6213 27.2702 18.4649 28.0214 19.1698L30.9565 16.304C29.1538 14.6284 26.808 13.6 24 13.6C19.9325 13.6 16.4196 15.9342 14.7094 19.3315L18.072 21.9431C18.9156 19.4355 21.2498 17.6213 24 17.6213V17.6213Z" fill="#EA4335"/>
-                        <path d="M33.984 24.2311C33.984 23.376 33.9147 22.752 33.7644 22.1049H24V25.9644H29.7316C29.616 26.9235 28.992 28.368 27.6053 29.3386L30.8871 31.8809C32.8516 30.0666 33.984 27.3973 33.984 24.2311V24.2311Z" fill="#4285F4"/>
-                        <path d="M18.0836 26.0569C17.864 25.4098 17.7369 24.7164 17.7369 24C17.7369 23.2835 17.864 22.5902 18.072 21.9431L14.7093 19.3315C14.0045 20.7413 13.6 22.3244 13.6 24C13.6 25.6755 14.0045 27.2587 14.7093 28.6684L18.0836 26.0569V26.0569Z" fill="#FBBC05"/>
-                        <path d="M24 34.4C26.808 34.4 29.1653 33.4756 30.8871 31.8809L27.6053 29.3387C26.7271 29.9511 25.5484 30.3787 24 30.3787C21.2498 30.3787 18.9156 28.5644 18.0836 26.0569L14.7209 28.6684C16.4311 32.0658 19.9324 34.4 24 34.4V34.4Z" fill="#34A853"/>
-                        </svg>
-
-                        <img style="height: 48px;" src="/assets/svgs/insta.svg">
-                    </div>
-            <a style="margin-top: 30px;" href="" class="cs-button-solid">Call us now</a>
-        </div>
-    </div>
-  </section>
-                                
+          <a class="cs-button-solid" aria-label="learn more about our programs" href="">Explore our services</a>
+      </div>
+      <!-- Right Image Section -->
+      <div class="cs-image-group">
+          <!--Floating Box-->
+          <div class="cs-box" >
+              <span class="cs-number" style="color: var(--primary);" >100+</span>
+              <div class="cs-flex">
+                  <h3 class="cs-heading">Completed Projects</h3>
+                  <span class="cs-desc">in Commercial, Industrial & Residential Spaces</span>
+              </div>
+          </div>
+          <!--Image-->
+          <picture class="cs-picture">
+              <source media="(max-width: 600px)" srcset="/assets/images/home2.jpg">
+              <source media="(min-width: 601px)" srcset="/assets/images/home2.jpg">
+              <img loading="lazy" decoding="async" src="/assets/images/home2.jpg" alt="meeting" width="630" height="630" aria-hidden="true">
+          </picture>
+      </div>
+  </div>
+</section>
+                              
