--- a/src/_includes/components/4_service.html
+++ b/src/_includes/components/4_service.html
@@ -1,264 +1,279 @@
 <!-- ============================================ -->
-<!--            Side by Side Reverse              -->
+<!--                    Services                  -->
 <!-- ============================================ -->
 
 
 <style>
-    /*-- -------------------------- -->
-<---   Side by Side Reverse     -->
+  /*-- -------------------------- -->
+<---          Services          -->
 <--- -------------------------- -*/
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-  #sbs-r-1884 {
-    width: 100%;
-    padding: var(--sectionPadding);
-  
-    overflow: clip;
-    display: flex;
-    flex-direction: column;
-    /* aligns content to the left, set to center to centrally align */
-    align-items: flex-start;
-    position: relative;
-    z-index: 1;
-  }
-  #sbs-r-1884 .cs-container {
-    width: 100%;
-    /* changes to 1280px at desktop */
-    max-width: 36.5rem;
-    margin: auto;
-    display: grid;
-    justify-items: center;
-    grid-auto-flow: row;
-    /* 48px - 80px */
-    gap: clamp(3rem, 6vw, 5rem);
-  }
-  #sbs-r-1884 .cs-content {
-    /* set text align to left if content needs to be left aligned */
-    text-align: left;
-    width: 100%;
-    max-width: 40.625rem;
-    display: flex;
-    flex-direction: column;
-    /* centers content horizontally, set to flex-start to left align */
-    align-items: flex-start;
-    position: relative;
-    z-index: 3;
-  }
-  #sbs-r-1884 .cs-text {
-    margin-bottom: 1rem;
-  }
-  #sbs-r-1884 .cs-text:last-of-type {
-    margin-bottom: 2rem;
-  }
-  
-  #sbs-r-1884 .cs-image-group {
-    font-size: min(2.97vw, 1rem);
-    width: 28.875em;
-    height: 44.1875em;
-    display: block;
-    position: relative;
-    z-index: 1;
-  }
-  #sbs-r-1884 .cs-picture {
-    box-sizing: border-box;
-    background-color: #fff;
-    overflow: hidden;
-    border: 0.5em solid #fff;
-    border-radius: 16.25rem;
-    position: absolute;
-    z-index: -1;
-  }
-  #sbs-r-1884 .cs-picture img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  #sbs-r-1884 .cs-picture-large {
-    width: 23.8125em;
-    height: 34.4375em;
-    top: 0;
-    left: 3.1875em;
-  }
-  #sbs-r-1884 .cs-picture-small {
-    width: 15.3125em;
-    height: 24.25em;
-    bottom: 0em;
-    left: 0;
-  }
-  #sbs-r-1884 .cs-graphic {
-    height: auto;
-    position: absolute;
-  }
-  #sbs-r-1884 .cs-brown {
-    width: 8.25em;
-    height: auto;
-    top: 0;
-    right: 0;
-    z-index: -2;
-  }
-  #sbs-r-1884 .cs-dots {
-    width: 8.5625em;
-    height: auto;
-    top: 2.25em;
-    left: 0;
-  }
-  #sbs-r-1884 .cs-glitter {
-    width: 31.75em;
-    height: auto;
-    /* -48px to -100px */
-    right: calc(clamp(3em, 8vw, 6.25em)*-1);
-    bottom: -3.75em;
-    z-index: -2;
-  }
-  
-}
-/* Small Desktop - 1024px */
-@media only screen and (min-width: 64rem) {
-  #sbs-r-1884 .cs-container {
-    max-width: 80rem;
-    justify-items: initial;
-    grid-template-columns: repeat(2, auto);
-    align-items: stretch;
-  }
-  #sbs-r-1884 .cs-content {
-    /* 48px - 64px */
-    padding: clamp(3rem, 5vw, 4rem) 0;
-    grid-column: span 1;
-    order: 1;
-  }
-  #sbs-r-1884 .cs-image-group {
-    min-height: 44.1875rem;
-    height: auto;
-    grid-column: span 1;
-    order: 2;
-  }
-  #sbs-r-1884 .cs-picture-large {
-    height: 77.934939%;
-    width: 44rem;
-  }
-  #sbs-r-1884 .cs-picture-small {
-    height: 54.879774%;
-  }
-  #sbs-r-1884 .cs-brown {
-    top: 0;
-    right: 0;
-  }
-  #sbs-r-1884 .cs-glitter {
-    width: 31.75em;
-    height: 30.6875em;
-    /* 34px - 214px */
-    right: calc(clamp(2.125em, 10vw, 13.375em) * -1);
-  }
-
-
-}
-                                
-</style>
-
-<section id="sbs-r-1884" style="margin-top: 100px;">
-    <div class="cs-container">
-        <div class="cs-image-group">
-            <picture class="cs-picture cs-picture-large">
-                <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/home3.png">
-                <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/home3.png">
-                <img loading="lazy" decoding="async" src="/assets/images/home3.png" alt="dermatologist" width="324" height="467">
-            </picture>
-            <picture class="cs-picture cs-picture-small">
-                <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/home2.png">
-                <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/home2.png">
-                <img loading="lazy" decoding="async" src="/assets/images/home2.png" alt="dermatologist" width="324" height="467">
-            </picture>
-                   </div>
-        <div class="cs-content">
-            <div class="cs-flex">
-                <span class="cs-topper">I bring a wealth of expertise to</span>
-                <h2 class="cs-title">Guide you through every step</h2>
-            </div>
-            <p class="cs-text">
-                Whether you're searching for your perfect home or negotiating a commercial property, I'm here to ensure you receive exceptional service and results.</p>
-
-
-
-<style>
-    /* Mobile - 360px */
-/* you can copy and paste these styles into the section CSS where you placed the #list-1405 HTML, or you can place it in your global stylesheet so you can reuse the HTML in any Side By Side section on your site. That way when you make changes to it, it will also change everywhere in the site */
-@media only screen and (min-width: 0rem) {
-    #list-1405 {
+    #services-1252 {
+        padding: var(--sectionPadding);
+        position: relative;
+        z-index: 10;
+        background-color: #fafafa;
+    }
+    #services-1252 .cs-container {
         width: 100%;
-        margin: 0 0 1.5rem 0;
+        max-width: 80rem;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: clamp(3rem, 6vw, 4rem);
+    }
+    #services-1252 .cs-content {
+        /* set text align to left if content needs to be left aligned */
+        text-align: left;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        /* centers content horizontally, set to flex-start to left align */
+        align-items: flex-start;
+    }
+
+    #services-1252 .cs-title {
+        max-width: 20ch;
+    }
+    #services-1252 .cs-card-group {
+        margin: 0;
         padding: 0;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        /* 16px - 20px */
+        gap: clamp(1rem, 2vw, 1.25rem);
+    }
+    #services-1252 .cs-item {
+        width: 100%;
+        text-align: left;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        background-color: #000;
+        border-radius: 0.5rem;
+        /* clips background image corners */
+        overflow: hidden;
+        box-shadow: 0px 12px 80px 0px rgba(26, 26, 26, 0.08);
+        /* prevents padding and border from affecting height and width */
+        box-sizing: border-box;
+        grid-column: span 12;
+        grid-row: span 1;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 0.75rem;
+        justify-content: flex-end;
+        position: relative;
+        z-index: 1;
     }
-    #list-1405 .cs-li {
-        font-size: var(--bodyFontSize);
-        list-style: none;
-        line-height: 1.5em;
+    #services-1252 .cs-item:hover .cs-item-background img {
+        opacity: 1;
+        transform: scale(1.3);
+    }
+    #services-1252 .cs-item:hover .cs-h3 {
+        color: var(--primary);
+    }
+    #services-1252 .cs-item:before {
+        content: "";
         width: 100%;
-        color: var(--bodyTextColor);
-        display: flex;
-        justify-content: flex-start;
-        /* push icon top the top so if the list item goes to two lines the icon stays at the top */
-        align-items: flex-start;
-        gap: 0.5rem;
-    }
-    #list-1405 .cs-icon {
-        width: 1.5rem;
-        height: auto;
-        /* adds extra space between the icon and top of parent so it's more centered */
-        margin-top: 1px;
+        height: 100%;
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        /* prevents border from affecting height and width */
+        box-sizing: border-box;
+        border-radius: 0.5rem;
+        /* prevents the mouse from interacting with it so when you hover hover the other elements inside the card it doesn't block your mouse from hovering over them */
+        pointer-events: none;
+        opacity: 1;
+        position: absolute;
         display: block;
+        top: 0;
+        left: 0;
+        z-index: 10;
+    }
+    #services-1252 .cs-link {
+        text-decoration: none;
+        /* 125px - 236px */
+        /* padding goes on the link, not the cs-item as is normal. We do this because we want the whole card to be hoverable. So we add the padding to the link tag to create the space inside the card. By adding the space inside the cs-link tag we can make the whole card hoverable since the padding is now contributing to the height and widht of the link */
+        padding: clamp(7.8125rem, 19vw, 14.75rem) 1.5rem 1.5rem;
+    }
+    #services-1252 .cs-h3 {
+        /* 20px - 25px */
+        font-size: clamp(1.25rem, 2.5vw, 1.5625rem);
+        line-height: 1.2em;
+        font-weight: bold;
+        text-align: inherit;
+        margin: 0 0 0.75rem 0;
+        color: var(--bodyTextColorWhite);
+        transition: color 0.3s;
+        text-transform: uppercase;
+    }
+    #services-1252 .cs-item-text {
+        /* 14px - 16px */
+        font-size: clamp(0.875rem, 1.5vw, 1rem);
+        line-height: 1.5em;
+        max-width: 28.125rem;
+        margin: 0;
+        padding: 0;
+        color: var(--bodyTextColorWhite);
+    }
+    #services-1252 .cs-item-background {
+        width: 100%;
+        height: 100%;
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+    }
+    #services-1252 .cs-item-background:before {
+        /* background color overlay */
+        content: "";
+        position: absolute;
+        display: block;
+        height: 100%;
+        width: 100%;
+        background: #1a1a1a;
+        opacity: 0.24;
+        top: 0;
+        left: 0;
+        z-index: 1;
+    }
+    #services-1252 .cs-item-background:after {
+        /* background color overlay */
+        content: "";
+        position: absolute;
+        display: block;
+        height: 100%;
+        width: 100%;
+        background: -moz-linear-gradient(
+            top,
+            rgba(0, 0, 0, 0) 0%,
+            #000000 100%
+        );
+        /* FF3.6-15 */
+        background: -webkit-linear-gradient(
+            top,
+            rgba(0, 0, 0, 0) 0%,
+            #000000 100%
+        );
+        /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0) 0%,
+            #000000 100%
+        );
+        opacity: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 2;
+    }
+    #services-1252 .cs-item-background img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        /* Makes img tag act as a background image */
+        object-fit: cover;
+        opacity: .7;
+        transition:
+            transform 0.6s,
+            opacity 0.3s;
+    }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+
+    #services-1252 .cs-content {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 3rem;
+    }
+    #services-1252 .cs-title {
+        margin: 0;
+    }
+    #services-1252 .cs-flex-group {
+        width: 50%;
+    }
+    #services-1252 .cs-item {
+        grid-column: span 6;
+    }
+}
+/* Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+    #services-1252 .cs-item {
+        grid-column: span 3;
     }
 }
 
                                 
 </style>
 
-<ul id="list-1405" class="cs-ul">
-    <li class="cs-li">
-        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/black-check.svg" alt="checkmark" width="24" height="24">
-        Expert Guidance
-    </li>
-    <li class="cs-li">
-        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/black-check.svg" alt="checkmark" width="24" height="24">
-        Premier Recognition
-    </li>
+<section id="services-1252">
+  <div class="cs-container">
+      <div class="cs-content">
+          <div class="cs-flex-group">
+              <span class="cs-topper">Additional</span>
+              <h2 class="cs-title">Residential Construction Services</h2>
+          </div>
+          <p class="cs-text">
+            We bring you vision to life with a deep customer understanding          </p>
+      </div>
 
-    <li class="cs-li">
-        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/black-check.svg" alt="checkmark" width="24" height="24">
-        Proven Results
-    </li>
-    <li class="cs-li">
-        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/black-check.svg" alt="checkmark" width="24" height="24">
-        Client-Centric Approach
-    </li>
-
-    <li class="cs-li">
-        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/black-check.svg" alt="checkmark" width="24" height="24">
-        Easy Communication
-    </li>
-    <li class="cs-li">
-        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/black-check.svg" alt="checkmark" width="24" height="24">
-        100% 5 Star Reviews
-    </li>
-</ul>
-                                
-
-                
-          
-    {% include 'components/cta_button.html' %}
-        </div>
-       
+      <ul class="cs-card-group">
+          <li class="cs-item" >
+              <a href="" class="cs-link">
+                  <h3 class="cs-h3"> Tile &<BR>Paint Work</h3>
+               
+              </a>
+              <picture class="cs-item-background">
+                  <source media="(max-width: 600px)" srcset="/assets/images/residential1.jpg">
+                  <source media="(min-width: 601px)" srcset="/assets/images/residential1.jpg">
+                  <img decoding="async" src="/assets/images/residential1.jpg" alt="construction" width="413" height="374" aria-hidden="true">
+              </picture>
+          </li>
+          <li class="cs-item">
+              <a href="" class="cs-link">
+                  <h3 class="cs-h3">Light Plumbing & Electrical Upgrades</h3>
+             
+              </a>
+              <picture class="cs-item-background">
+                  <source media="(max-width: 600px)" srcset="/assets/images/residential2.jpg">
+                  <source media="(min-width: 601px)" srcset="/assets/images/residential2.jpg">
+                  <img decoding="async" src="/assets/images/residential2.jpg" alt="construction" width="413" height="374" aria-hidden="true">
+              </picture>
+          </li>
+          <li class="cs-item">
+              <a href="" class="cs-link">
+                  <h3 class="cs-h3">Concrete Staircase Wood Graining</h3>
+               
+              </a>
+              <picture class="cs-item-background">
+                  <source media="(max-width: 600px)" srcset="/assets/images/residential3.jpg">
+                  <source media="(min-width: 601px)" srcset="/assets/images/residential3.jpg">
+                  <img decoding="async" src="/assets/images/residential3.jpg" alt="construction" width="413" height="374" aria-hidden="true">
+              </picture>
+          </li>
+          <li class="cs-item">
+              <a href="" class="cs-link">
+                  <h3 class="cs-h3">Vinyl Cabinet Wrapping & Wallpaper</h3>
+               
+              </a>
+              <picture class="cs-item-background">
+                  <source media="(max-width: 600px)" srcset="/assets/images/residential1.jpg">
+                  <source media="(min-width: 601px)" srcset="/assets/images/residential1.jpg">
+                  <img decoding="async" src="/assets/images/residential1.jpg" alt="construction" width="413" height="374" aria-hidden="true">
+              </picture>
+          </li>
+      </ul>
+      {% include 'components/cta_button.html' %}
     </div>
+
+
 </section>
-                                
+                              
