--- a/src/_includes/components/4homegallery.html
+++ b/src/_includes/components/4homegallery.html
@@ -15,6 +15,7 @@
     overflow: hidden;
     position: relative;
     z-index: 1;
+    background-color: #333;
   }
   #gallery-2243 .cs-container {
     width: 100%;
@@ -150,7 +151,7 @@
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">See Why Our Customers Love Us</span>
-            <h2 class="cs-title">Our Best Work</h2>
+            <h2 class="cs-title" style="color: white;">Photos of Our Work</h2>
     
         </div>
         <div class="cs-gallery">
