--- a/src/_includes/components/faq.html
+++ b/src/_includes/components/faq.html
@@ -10,7 +10,7 @@
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-
+#faq-595 { background-color: #fafafa;}
     #faq-595 .cs-container {
         width: 100%;
         max-width: 80rem;
@@ -21,6 +21,8 @@
         align-items: center;
         /* 40px - 48px */
         gap: clamp(2.5rem, 5vw, 3rem);
+
+       
     }
     #faq-595 .cs-content {
         text-align: left;
@@ -228,10 +230,10 @@
     <div class="cs-container">
         <picture class="cs-picture">
             <!--Mobile Image-->
-            <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/FAQ/kitchen1-m.jpg">
+            <source media="(max-width: 600px)" srcset="/assets/images/3.jpg">
             <!--Tablet and above Image-->
-            <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/FAQ/kitchen1.jpg">
-            <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/FAQ/kitchen1.jpg" alt="kitchen" width="373" height="550">
+            <source media="(min-width: 601px)" srcset="/assets/images/3.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/3.jpg" alt="kitchen" width="373" height="550">
         </picture>
         <div class="cs-content">
            
