--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -1,6 +1,7 @@
 <!-- ============================================ -->
 <!--                 Navigation                   -->
 <!-- ============================================ -->
+ 
 <style>
     /*-- -------------------------- -->
 <---     Mobile Navigation      -->
@@ -427,8 +428,8 @@
             height: auto;
             opacity: 1;
             visibility: visible;
-            margin: 0.75rem 0 0 0;
-            padding: 0.75rem 0 0px;
+            margin:0px;
+            padding: 0px;
         }
 
         #cs-navigation .cs-dropdown.cs-active .cs-drop-link {
@@ -800,6 +801,109 @@
             line-height: 2.875rem;
         }
     }
+
+
+    /*-- -------------------------- -->
+<---    Tertiary Navigation     -->
+<--- -------------------------- -*/
+
+/* Mobile - 1023px */
+@media only screen and (max-width: 1023px) {
+  #cs-navigation .cs-dropdown.cs-active .cs-drop-ul {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
+    margin:0px;
+    height: auto;
+    padding: 0px;
+  }
+  #cs-navigation .cs-dropdown.cs-active .cs-drop-link {
+    opacity: 1;
+  }
+  #cs-navigation .cs-dropdown.cs-active .cs-dropdown-toggle {
+    pointer-events: none;
+  }
+  #cs-navigation .cs-dropdown-toggle {
+    pointer-events: none;
+  }
+  #cs-navigation .cs-drop-ul {
+    width: 67%;
+    box-sizing: border-box;
+  }
+  #cs-navigation .cs-drop3 {
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(0);
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.2);
+    box-sizing: border-box;
+    height: 0;
+    width: 100%;
+    overflow: hidden;
+    padding: 0;
+    transition: padding 0.3s, margin 0.3s, height 0.3s, opacity 0.3s, transform 0.3s, visibility 0.3s;
+    gap: 0.5rem;
+    transform-origin: top;
+  }
+  #cs-navigation .cs-drop-li {
+    width: 100%;
+  }
+  #cs-navigation .cs-drop-li.drop3-active .cs-drop3 {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
+    height: auto;
+    padding: 1.25rem 1rem 1.25rem 1.25rem;
+  }
+  #cs-navigation .cs-drop-li.drop3-active .cs-drop3-main {
+    margin-bottom: 0.75rem;
+  }
+  #cs-navigation .cs-drop3-main {
+    font-weight: bold;
+    transition: margin 0.3s;
+  }
+  #cs-navigation .cs-drop3-main .cs-drop-icon {
+    filter: grayscale(1) brightness(1000%);
+  }
+  #cs-navigation .cs-drop-li3 {
+    list-style: none;
+  }
+}
+/* Desktop - 1024px */
+@media only screen and (min-width: 1024px) {
+  #cs-navigation .cs-drop-ul {
+    overflow: visible;
+  }
+  #cs-navigation .cs-drop-li {
+    z-index: 1;
+    position: relative;
+  }
+  #cs-navigation .cs-drop-li:hover .cs-drop3 {
+    display: block;
+  }
+  #cs-navigation .cs-drop3 {
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    display: none;
+    background-color: #fff;
+    min-width: 12.5rem;
+    padding: 0;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  }
+  #cs-navigation .cs-drop3-main:hover .cs-drop-icon {
+    transform: rotate(-90deg);
+  }
+  #cs-navigation .cs-drop-icon {
+    transition: transform 0.3s;
+  }
+  #cs-navigation .cs-drop-li3 {
+    list-style: none;
+  }
+}
+                                
 </style>
 <header id="cs-navigation">
     <div class="cs-container">
@@ -821,70 +925,95 @@
             <!-- We need a wrapper div so we can set a fixed height on the cs-ul in case the nav list gets too long from too many dropdowns being opened and needs to have an overflow scroll. This wrapper acts as the background so it can go the full height of the screen and not cut off any overflowing nav items while the cs-ul stops short of the bottom of the screen, which keeps all nav items in view no matter how mnay there are-->
             <div class="cs-ul-wrapper">
                 <ul id="cs-expanded" class="cs-ul">
-                    {% set navPages = collections.all | eleventyNavigation %}
-
-                    {# Loop through all pages with a eleventyNavigation in the frontmatter #}
-                    {% for entry in navPages %}
-
-                    {# Define a hasChild variable to make it easier to test what navigation items are have child
-                    dropdown pages #}
-                    {% set hasChild = entry.children.length %}
-
-                    {# Check the frontmatter for hideOnMobile/hideOnDesktop. Form a list of classes to be joined when
-                    the item is rendered #}
-                    {% set hideClasses = [] %}
-                    {% if entry.hideOnMobile %}
-                    {% set hideClasses = (hideClasses.push("cs-hide-on-mobile"), hideClasses) %}
-                    {% endif %}
-                    {% if entry.hideOnDesktop %}
-                    {% set hideClasses = (hideClasses.push("cs-hide-on-desktop"), hideClasses) %}
-                    {% endif %}
-
-                    {# If this page is a dropdown, give it the appropriate classes, icons and accessibility attributes
-                    #}
-                    <li class="cs-li {% if hasChild %} cs-dropdown {% endif %} {{ hideClasses | join(" ") }}">
-
-                        {# If the page has child dropdown pages, render it as a <button> tag with the appropriate
-                            dropdown HTML #}
-                            {% if hasChild %}
-
-                            {# Check to see if the user's current page is one of the child pages. If so, apply the
-                            cs-active class to the dropdown parent #}
-                            {% set activeClass = "" %}
-                            {% for child in entry.children %}
-                            {% if child.url == page.url %}
-                            {% set activeClass = "cs-active" %}
-                            {% endif %}
-                            {% endfor %}
-
-                            {# Render the <button> with the active class, dropdown icon and child links #}
-                                <button class="cs-li-link cs-dropdown-button {{ activeClass }}" aria-expanded="false"
-                                    aria-controls="dropdown-{{ entry.key }}" aria-label="dropdown-{{ entry.key }}">
-                                    {{ entry.key }}
-                                    <img class="cs-drop-icon" style="filter: brightness(0) invert(1);"
-                                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg"
-                                        alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
-                                </button>
-
-                                {# Dropdowns have another ul/li set up within the parent li, which gets rendered in the
-                                same way as a normal link #}
-                                <ul class="cs-drop-ul" id="dropdown-{{ entry.key }}">
-                                    {% for child in entry.children %}
-                                    <li class="cs-drop-li">
-                                        <a href="{{ child.url }}" class="cs-li-link cs-drop-link">{{ child.key }}</a>
-                                    </li>
-                                    {% endfor %}
-                                </ul>
-                                {% else %}
-                                {# Normal pages are rendered as <a> tags, in the normal way you'd expect #}
-                                    <a href="{{ entry.url }}"
-                                        class="cs-li-link {% if entry.url == page.url %} cs-active {% endif %}" {% if
-                                        entry.url==page.url %} aria-current="page" {% endif %}>
-                                        {{ entry.key }}
-                                    </a>
-                                    {% endif %}
+                    <li class="cs-li">
+                        <a href="" class="cs-li-link {{ 'cs-active' if '/' == page.url }}">
+                            Home
+                        </a>
                     </li>
-                    {% endfor %}
+                    <li class="cs-li">
+                        <a href="" class="cs-li-link {{ 'cs-active' if 'about' == page.fileSlug }}">
+                            About
+                        </a>
+                    </li>
+                    <!--Copy and paste this cs-dropdown list item and replace any .cs-li with this cs-dropdown group to make a new dropdown and it will work-->
+                    <li class="cs-li cs-dropdown" tabindex="0">
+                        <span class="cs-li-link cs-dropdown-toggle">
+                            Services
+                            <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
+                        </span>
+                        <ul class="cs-drop-ul">
+                            <li class="cs-drop-li cs-drop3-main">
+                                <span class="cs-li-link cs-drop-link ">
+                                    Commercial Construction Services
+                                    <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
+                                </span>
+                                <!--Tertiary-->
+                                <ul class="cs-drop3">
+                                    <li class="cs-drop-li3">
+                                        <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Tenant Office Renovations</a>
+                                    </li>
+                                    <li class="cs-drop-li3">
+                                        <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Commercial Remodeling</a>
+                                    </li>
+                                    <li class="cs-drop-li3">
+                                        <a href="" class="cs-li-link cs-drop-link cs-drop-link3">New Commercial Design Build</a>
+                                    </li>
+                                    <li class="cs-drop-li3">
+                                        <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Building Maintenance</a>
+                                    </li>
+                        
+                                </ul>
+                            </li>
+                            <li class="cs-drop-li cs-drop3-main">
+                                <span class="cs-li-link cs-drop-link">
+                                    Industrial Construction Services
+                                    <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
+                                </span>
+                                <!--Tertiary-->
+                                <ul class="cs-drop3">
+                                    <li class="cs-drop-li3">
+                                        <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Service</a>
+                                    </li>
+                                    <li class="cs-drop-li3">
+                                        <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Service</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="cs-drop-li cs-drop3-main">
+                                <span class="cs-li-link cs-drop-link">
+                                    Residential Construction Services
+                                    <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
+                                </span>
+                                <!--Tertiary-->
+                                <ul class="cs-drop3">
+                                    <li class="cs-drop-li3">
+                                        <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Service</a>
+                                    </li>
+                                    <li class="cs-drop-li3">
+                                        <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Service</a>
+                                    </li>
+                                    <li class="cs-drop-li3">
+                                        <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Service</a>
+                                    </li>
+                                    <li class="cs-drop-li3">
+                                        <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Service</a>
+                                    </li>
+                   
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="cs-li">
+                        <a href="" class="cs-li-link {{ 'cs-active' if 'about' == page.fileSlug }}">
+                            Photos
+                        </a>
+                    </li>
+                    <li class="cs-li">
+                        <a href="/contact" class="cs-li-link {{ 'cs-active' if 'about' == page.fileSlug }}">
+                           Contact 
+                        </a>
+                    </li>
+                                
                 </ul>
                 <div class="cs-call">
 
@@ -910,3 +1039,16 @@
         </button> -->
     </div>
 </header>
+
+<script>
+    // tertiary nav toggle code
+const tertiaryDrop = Array.from(document.querySelectorAll('#cs-navigation .cs-drop3-main'));
+
+for (const item of tertiaryDrop) {
+    item.addEventListener('click', (e) => {
+        e.stopPropagation();
+        item.classList.toggle('drop3-active');
+    });
+}
+                                
+</script>
