--- a/src/_includes/components/hero.html
+++ b/src/_includes/components/hero.html
@@ -103,7 +103,7 @@
   }
   #hero-2041 .cs-background {
     width: 100%;
-    height: 66%;
+    height: 100%;
     display: block;
     position: absolute;
     top: 0;
@@ -154,11 +154,13 @@
     min-width: 0;
   }
   #hero-2041 .cs-background {
-    height: 84%;
+    height:100%;
   }
 }
 /* Large Desktop - Parallax Effect - 1600px */
 @media only screen and (min-width: 100rem) {
+  #hero-2041 {min-height: 100vh;}
+
   #hero-2041 .cs-background {
   
     background: url("/assets/images/bg1.jpg");
@@ -188,10 +190,10 @@
 <section id="hero-2041">
   <div class="cs-container">
       <div class="cs-content">
-          <span class="cs-topper">St. Louis, MO & Surrouning Area</span>
+          <span class="cs-topper" style="color: #4EEF1A; margin-bottom: 20px;" data-aos="fade-up">St. Louis, MO & Surrouning Area</span>
           <h1 class="cs-title">Commercial Construction + Home <span style="color:#4EEF1A">&</span> Business Remodeling</h1>
           <p class="cs-text">Your project deserves more than a standard contractor. It deserves vision, expertise, and craftsmanship that outshines the rest. While others stick to templates, we create custom, high end solutions that set new standards in construction and design.</p>
-          <a href="" class="cs-button-10" aria-label="read more about us">
+          <a href="" class="cs-button-solid" aria-label="read more about us">
             Free Quote 618.771.0767
             <svg class="cs-icon" aria-hidden="true" width="30" height="24" viewBox="0 0 30 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.83 11.29L10.59 7.05001C10.497 6.95628 10.3864 6.88189 10.2646 6.83112C10.1427 6.78035 10.012 6.75421 9.88 6.75421C9.74799 6.75421 9.61729 6.78035 9.49543 6.83112C9.37357 6.88189 9.26297 6.95628 9.17 7.05001C8.98375 7.23737 8.87921 7.49082 8.87921 7.75501C8.87921 8.0192 8.98375 8.27265 9.17 8.46001L12.71 12L9.17 15.54C8.98375 15.7274 8.87921 15.9808 8.87921 16.245C8.87921 16.5092 8.98375 16.7626 9.17 16.95C9.26344 17.0427 9.37426 17.116 9.4961 17.1658C9.61794 17.2155 9.7484 17.2408 9.88 17.24C10.0116 17.2408 10.1421 17.2155 10.2639 17.1658C10.3857 17.116 10.4966 17.0427 10.59 16.95L14.83 12.71C14.9237 12.617 14.9981 12.5064 15.0489 12.3846C15.0997 12.2627 15.1258 12.132 15.1258 12C15.1258 11.868 15.0997 11.7373 15.0489 11.6154C14.9981 11.4936 14.9237 11.383 14.83 11.29Z" fill="white"/>
