--- a/src/_includes/components/2.html
+++ b/src/_includes/components/2.html
@@ -15,6 +15,10 @@
     overflow: hidden;
     background-color: #fafafa;
   }
+
+  #sbsr-2289 .cs-topper {
+    margin: 0px auto 50px; color: #999; font-weight: 100; text-align: center; text-transform: none;
+  }
   #sbsr-2289 .cs-container {
     width: 100%;
     /* changes to 1280px at desktop */
@@ -204,6 +208,10 @@
 }
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
+  #sbsr-2289 .cs-topper {
+    margin: 50px auto 150px; color: #999; font-weight: 100; text-align: center; text-transform: none;
+  }
+
   #sbsr-2289 .cs-box {
     flex-direction: row;
     align-items: center;
@@ -235,7 +243,7 @@
 </style>
 
 <section id="sbsr-2289">
-  <div class="cs-topper" data-aos="fade-up" style="margin: 100px auto; color: #999; font-weight: 100; text-align: center; text-transform: none;">Your Business Deserves a Better Construction Experience</div>
+  <div class="cs-topper" data-aos="fade-up"> Your Business Deserves a Better Construction Experience</div>
   <div class="cs-container">
       <!-- Left Content Section-->
       <div class="cs-content">
