--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -13,6 +13,7 @@
   #cta-385 {
     padding: var(--sectionPadding);
     position: relative;
+    padding-bottom: 0px;
     
   }
   #cta-385 .cs-background {
