--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -319,7 +319,7 @@
     </span>
     <div class="cs-bottom-links">
       <STYLE>
-        .credit {color:white; text-align: left;}
+        .credit {color:white; text-align: left; margin-top: 30px;}
         .gandalfpill {border:.5px solid #eee; transition: all ease .2s;margin-left:5px;vertical-align:middle;  display: inline-block; background-color: white; padding:0 8px; border-radius: 999px;}
     .gandalfpill:hover img {filter: grayscale(1) brightness(1000%);transition: all ease .8s;}
     .gandalfpill:hover {box-shadow:2px 2px #FFF; background-color: black;  transform: translateY(-5px); transition: all ease .2s; ;}
