--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -1009,7 +1009,7 @@
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="/contact" class="cs-li-link {{ 'cs-active' if 'about' == page.fileSlug }}">
+                        <a href="" class="cs-li-link {{ 'cs-active' if 'about' == page.fileSlug }}">
                            Contact 
                         </a>
                     </li>
