--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -827,7 +827,7 @@
     pointer-events: none;
   }
   #cs-navigation .cs-drop-ul {
-    width: 67%;
+ width: 94%;
     box-sizing: border-box;
   }
   #cs-navigation .cs-drop3 {
@@ -848,13 +848,15 @@
   }
   #cs-navigation .cs-drop-li {
     width: 100%;
+    border-bottom:1px solid white;
   }
   #cs-navigation .cs-drop-li.drop3-active .cs-drop3 {
     visibility: visible;
     opacity: 1;
     transform: scale(1);
     height: auto;
-    padding: 1.25rem 1rem 1.25rem 1.25rem;
+    padding: 1rem;
+    margin-bottom: 10px;
   }
   #cs-navigation .cs-drop-li.drop3-active .cs-drop3-main {
     margin-bottom: 0.75rem;
@@ -868,6 +870,8 @@
   }
   #cs-navigation .cs-drop-li3 {
     list-style: none;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 10px;
   }
 }
 /* Desktop - 1024px */
