--- a/src/_includes/components/2.html
+++ b/src/_includes/components/2.html
@@ -257,7 +257,7 @@
                       </p>
 
 
-          <a class="cs-button-solid" aria-label="learn more about our programs" href="">Explore our services</a>
+          <a class="cs-button-solid" aria-label="learn more about our programs" href="#services">Explore our services</a>
       </div>
       <!-- Right Image Section -->
       <div class="cs-image-group">
@@ -277,5 +277,5 @@
           </picture>
       </div>
   </div>
+  <SPAN id="services"></SPAN>
 </section>
-                              
