--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -827,7 +827,7 @@
     pointer-events: none;
   }
   #cs-navigation .cs-drop-ul {
- width: 94%;
+ width: 100%;
     box-sizing: border-box;
   }
   #cs-navigation .cs-drop3 {
@@ -849,6 +849,7 @@
   #cs-navigation .cs-drop-li {
     width: 100%;
     border-bottom:1px solid white;
+    padding-right: 30px;
   }
   #cs-navigation .cs-drop-li.drop3-active .cs-drop3 {
     visibility: visible;
