--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -14,6 +14,7 @@
     padding: var(--sectionPadding);
     position: relative;
     padding-bottom: 0px;
+ 
     
   }
   #cta-385 .cs-background {
@@ -100,6 +101,9 @@
 }
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
+  #cta-385 {
+    padding-top: 0px;
+  }
   #cta-385 .cs-container {
     flex-direction: row;
     justify-content: space-between;
