--- a/src/_includes/components/cta_button.html
+++ b/src/_includes/components/cta_button.html
@@ -1,1 +1,1 @@
-<DIV style="margin: 0px 0px; text-align: center;"><a class="cs-button-solid" style="margin: auto;" href="tel:{{client.phoneForTel}}">Get A Free Custom Quote</a></DIV>
+<DIV style="margin: 0px 0px;"><a class="cs-button-solid" style="margin: auto;" href="tel:{{client.phoneForTel}}">Get A Free Custom Quote</a></DIV>
