--- a/src/_includes/components/9form.html
+++ b/src/_includes/components/9form.html
@@ -11,7 +11,7 @@
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
     #contact-587 {
-        background-color: #fafbfc;
+        background-color: #fafafa;
         position: relative;
         z-index: 1;
     }
