--- a/src/_includes/components/about_content1.html
+++ b/src/_includes/components/about_content1.html
@@ -1,179 +1,328 @@
 <!-- ============================================ -->
-<!--                   Banner                     -->
+<!--                 Side By Side                 -->
 <!-- ============================================ -->
+
 
 <style>
     /*-- -------------------------- -->
-<---          Banner            -->
+<---       Side By Side         -->
 <--- -------------------------- -*/
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-    #banner-1400 {
-        padding: var(--sectionPadding);
-        /* 190px - 268px */
-        padding-top: clamp(11.875rem, 25vw, 16.75rem);
-        padding-bottom: 6.25rem;
-        /* clips the line from causing overflow issues for going off screen */
-        overflow: hidden;
-        position: relative;
-        z-index: 1;
-    }
-    #banner-1400 .cs-container {
-        text-align: center;
-        width: 100%;
-        max-width: 80rem;
-        margin: auto;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        flex-direction: column;
-        /* 8px - 12px */
-        gap: clamp(0.5rem, 1vw, 0.75rem);
-    }
-    #banner-1400 .cs-int-title {
-        /* 39px - 61px */
-        font-size: clamp(2.4375rem, 6.4vw, 3.8125rem);
-        font-weight: 900;
-        line-height: 1.2em;
-        text-align: inherit;
-        margin: 0;
-        color: var(--bodyTextColorWhite);
-        position: relative;
-    }
-    #banner-1400 .cs-breadcrumbs {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    #banner-1400 .cs-link {
-        font-size: 1rem;
-        line-height: 1.2em;
-        text-decoration: none;
-        color: var(--bodyTextColorWhite);
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    #banner-1400 .cs-link:last-of-type {
-        /* remove the chevron on the last list item */
-    }
-    #banner-1400 .cs-link:last-of-type::after {
-        display: none;
-    }
-    #banner-1400 .cs-link:after {
-        /* chevron */
-        content: "";
-        width: 0.4375rem;
-        height: 0.75rem;
-        margin: 0 1rem;
-        background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/white-chev.svg");
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-        position: relative;
-        display: block;
-    }
-    #banner-1400 .cs-link.cs-active {
-        color: var(--primary);
-    }
-    #banner-1400 .cs-background {
-        width: 100%;
-        height: 100%;
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-    }
-    #banner-1400 .cs-background:before {
-        /* gradient overlay */
-        content: "";
-        width: 100%;
-        height: 100%;
-        background: #000;
-        opacity: 0.4;
-        position: absolute;
-        display: block;
-        top: 0;
-        left: 0;
-        z-index: 1;
-    }
-    #banner-1400 .cs-background:after {
-        /* gradient overlay */
-        content: "";
-        width: 100%;
-        height: 40%;
-        background: -webkit-gradient(
-            linear,
-            left top,
-            left bottom,
-            from(#000000),
-            to(rgba(0, 0, 0, 0))
-        );
-        background: -o-linear-gradient(top, #000000 0%, rgba(0, 0, 0, 0) 100%);
-        background: linear-gradient(
-            to bottom,
-            #000000 0%,
-            rgba(0, 0, 0, 0) 100%
-        );
-        position: absolute;
-        display: block;
-        top: 0;
-        left: 0;
-        z-index: 2;
-    }
-    #banner-1400 .cs-background img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        /* Makes img tag act as a background image */
-        object-fit: cover;
-    }
+  #sbs-2283 {
+    padding: var(--sectionPadding);
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+  }
+  #sbs-2283 .cs-container {
+    width: 100%;
+    /* changes to 1280px at desktop */
+    max-width: 36.5rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
+  }
+  #sbs-2283 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: left;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: flex-start;
+  }
+  #sbs-2283 .cs-content-images {
+    display: none;
+  }
+  #sbs-2283 .cs-text {
+    max-width: 100%;
+    margin-bottom: 1rem;
+  }
+  #sbs-2283 .cs-text:last-of-type {
+    margin: 0;
+  }
+  #sbs-2283 .cs-card-group {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+    order: 3;
+  }
+  #sbs-2283 .cs-item {
+    list-style: none;
+    /* 24px - 32px */
+    padding: clamp(1.5rem, 5vw, 2rem);
+    border-left: 4px solid var(--primary);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.75rem;
+    position: relative;
+    z-index: 1;
+  }
+  #sbs-2283 .cs-item:before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: var(--primary);
+    opacity: 0.05;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  #sbs-2283 .cs-item-picture {
+    display: none;
+  }
+  #sbs-2283 .cs-h3 {
+    font-size: 1rem;
+    line-height: 1.2em;
+    font-weight: 700;
+    margin: 0;
+    color: var(--headerColor);
+  }
+  #sbs-2283 .cs-item-text {
+    font-size: 1rem;
+    line-height: 1.5em;
+    margin: 0;
+    color: var(--bodyTextColor);
+  }
+  #sbs-2283 .cs-button-solid {
+    font-size: 1rem;
+    font-weight: 700;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+    text-align: center;
+    text-decoration: none;
+    min-width: 9.375rem;
+    margin: 0;
+    /* prevents padding from adding to the width */
+    box-sizing: border-box;
+    padding: 0 1.5rem;
+    background-color: var(--primary);
+    color: #fff;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+  }
+  #sbs-2283 .cs-button-solid:before {
+    content: "";
+    width: 0%;
+    height: 100%;
+    background: #000;
+    opacity: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: width 0.3s;
+  }
+  #sbs-2283 .cs-button-solid:hover:before {
+    width: 100%;
+  }
+  #sbs-2283 .cs-image-group {
+    /* scales the whole group based on the view width size and stop when that vales equals .74em, resets at desktop */
+    font-size: min(2.48vw, 1rem);
+    width: 36.5em;
+    height: 38.6875em;
+    display: block;
+    position: relative;
+    z-index: 1;
+    order: 2;
+  }
+  #sbs-2283 .cs-picture {
+    display: block;
+    position: absolute;
+  }
+  #sbs-2283 .cs-picture img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  #sbs-2283 .cs-picture1 {
+    width: 23.8125em;
+    height: 23.8125em;
+    border-right: 0.875em solid #FEF5F4;
+    border-bottom: 0.875em solid #FEF5F4;
+    top: 0;
+    bottom: 17.5625em;
+    left: 0;
+  }
+  #sbs-2283 .cs-picture2 {
+    width: 23.875em;
+    height: 20.375em;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+  #sbs-2283 .cs-picture3 {
+    width: 13.4375em;
+    height: 9.5em;
+    bottom: 10em;
+    left: 6.25em;
+  }
 }
-/* Tablet - 768px */
-@media only screen and (min-width: 48rem) {
-    #banner-1400 .cs-background:before {
-        width: 50%;
-        height: 100%;
-        background: -webkit-gradient(
-            linear,
-            left top,
-            right top,
-            from(#000000),
-            to(rgba(0, 0, 0, 0))
-        );
-        background: -o-linear-gradient(left, #000000 0%, rgba(0, 0, 0, 0) 100%);
-        background: linear-gradient(
-            to right,
-            #000000 0%,
-            rgba(0, 0, 0, 0) 100%
-        );
-        opacity: 1;
-    }
+/* Small Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+  #sbs-2283 .cs-container {
+    max-width: 80rem;
+    gap: 2rem;
+  }
+  #sbs-2283 .cs-content {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 2.75rem;
+    position: relative;
+    z-index: 10;
+  }
+  #sbs-2283 .cs-flex {
+    width: 100%;
+    max-width: 46.125rem;
+  }
+  #sbs-2283 .cs-content-images {
+    width: 45vw;
+    max-width: 25.75rem;
+    height: auto;
+    display: block;
+    position: relative;
+    z-index: 1;
+    order: -1;
+  }
+  #sbs-2283 .cs-li {
+    align-items: center;
+  }
+  #sbs-2283 .cs-image-group {
+    display: none;
+  }
+  #sbs-2283 .cs-picture1 {
+    width: 100%;
+    /* -133px to -165px */
+    height: calc(100% + clamp(8.3125rem, 13vw, 10.3125rem));
+    top: 0;
+  }
+  #sbs-2283 .cs-picture3 {
+    width: 56%;
+    min-height: 100px;
+    max-width: 14.5625rem;
+    left: 50%;
+    top: calc(100% + 5rem);
+    transform: translateX(-50%);
+  }
+  #sbs-2283 .cs-picture3 img {
+    width: 100%;
+    height: auto;
+    position: relative;
+    z-index: 1;
+    top: auto;
+    left: auto;
+    object-fit: initial;
+  }
+  #sbs-2283 .cs-card-group {
+    width: 50%;
+    max-width: 32.5625rem;
+    margin-left: auto;
+    position: relative;
+    z-index: 1;
+  }
+  #sbs-2283 .cs-item-picture {
+    width: 30vw;
+    max-width: 25.8125rem;
+    border: none;
+    display: block;
+    position: absolute;
+    /* 72px - 130px */
+    right: calc(100% + clamp(4.5rem, 8.5vw, 8.125rem));
+    top: 2.25rem;
+    bottom: 0;
+  }
+  #sbs-2283 .cs-item-picture:before {
+    display: none;
+  }
+  #sbs-2283 .cs-picture2 {
+    width: 100%;
+    height: 100%;
+  }
 }
-
                                 
 </style>
 
-<div id="banner-1400">
+<section id="sbs-2283">
     <div class="cs-container">
-        <span class="cs-int-title">About Us</span>
-        <div class="cs-breadcrumbs">
-            <a href="" class="cs-link">Home</a>
-            <a href="" class="cs-link cs-active">About</a>
+        <div class="cs-image-group">
+            <!--Top left image-->
+            <picture class="cs-picture cs-picture1">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/about1.jpg">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/about1.jpg">
+                <img loading="lazy" decoding="async" src="/assets/images/about1.jpg" alt="wedding photoshoot" width="297" height="366">
+            </picture>
+            <picture class="cs-picture cs-picture2">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/about2.jpg">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/about2.jpg">
+                <img loading="lazy" decoding="async" src="/assets/images/about2.jpg" alt="photograph of a woman" width="405" height="376">
+            </picture>
         </div>
+        <div class="cs-content">
+            <div class="cs-flex">
+           
+                <h2 class="cs-title">Our Story</h2>
+                <p class="cs-text">
+                    For over 20 years, we specialized in high end residential painting, drywall, and remodeling. However, as the workforce and office needs shifted during and after COVID, we saw an opportunity. Businesses were downsizing but needed their workspaces to be more inviting, functional, and reflective of modern needs.
+                    <BR><BR>
+                    Employers today understand that office design plays a major role in employee retention and productivity. That’s where we make a difference. Unlike traditional commercial contractors who focus only on function, we bring a residential level attention to detail and comfort into commercial spaces. Creating environments that feel like home while maximizing efficiency.
+                                    </p>
+            </div>
+            <!--We hide this on mobile, adding the images into a group in the content section allows us to have better control over its responsivenes when the content section gets taller from more content-->
+            <div class="cs-content-images">
+                <picture class="cs-picture cs-picture1">
+                    <!--Mobile Image-->
+                    <source media="(max-width: 600px)" srcset="/assets/images/about1.jpg">
+                    <!--Tablet and above Image-->
+                    <source media="(min-width: 601px)" srcset="/assets/images/about1.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/about1.jpg" alt="wedding photoshoot" width="297" height="366">
+                </picture>
+         
+            </div>
+        </div>
+        <ul class="cs-card-group">
+            <li class="cs-item">
+                <h2 class="cs-h3">We specialize in:</h2>
+                <p class="cs-item-text">
+                    
+                    <B>Tenant Office Renovations</B> – Transforming office spaces for building owners and tenants.<BR><BR>
+                        <B> Commercial Remodeling </B> Upgrading office spaces, storefronts, restrooms, and common areas.<BR><BR>
+                            <B>New Commercial Design Build</B> – Custom solutions from concept to completion.<BR><BR>
+                                <B>Industrial Design-Build</B> – Efficient, high-quality industrial facility construction.<BR><BR>
+                                    <B> Building Maintenance</B> – Reliable property upkeep for management firms and owners.<BR>
+                </p>
+            </li>
+           
+            <!--We hide this on mobile, adding the images into a group in the content section allows us to have better control over its responsivenes when the cs-card-group gets taller from more content-->
+            <li class="cs-item cs-item-picture">
+                <picture class="cs-picture cs-picture2">
+                    <!--Mobile Image-->
+                    <source media="(max-width: 600px)" srcset="/assets/images/about2.jpg">
+                    <!--Tablet and above Image-->
+                    <source media="(min-width: 601px)" srcset="/assets/images/about2.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/about2.jpg" alt="photograph of a woman" width="405" height="376">
+                </picture>
+            </li>
+        </ul>
     </div>
-    <!--Background Image-->
-    <picture class="cs-background">
-        <!--Mobile Image-->
-        <source media="(max-width: 600px)" srcset="/assets/images/bg.jpg">
-        <!--Tablet and above Image-->
-        <source media="(min-width: 601px)" srcset="/assets/images/bg.jpg">
-        <img decoding="async" src="/assets/images/bg.jpg" alt="people laughing" width="1280" height="568" aria-hidden="true">
-    </picture>
-</div>
+</section>
                                 
