--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -931,12 +931,12 @@
             <div class="cs-ul-wrapper">
                 <ul id="cs-expanded" class="cs-ul">
                     <li class="cs-li">
-                        <a href="" class="cs-li-link {{ 'cs-active' if '/' == page.url }}">
+                        <a href="/" class="cs-li-link {{ 'cs-active' if '/' == page.url }}">
                             Home
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="" class="cs-li-link {{ 'cs-active' if 'about' == page.fileSlug }}">
+                        <a href="/about" class="cs-li-link {{ 'cs-active' if 'about' == page.fileSlug }}">
                             About
                         </a>
                     </li>
@@ -1009,12 +1009,12 @@
                         </ul>
                     </li>
                     <li class="cs-li">
-                        <a href="" class="cs-li-link {{ 'cs-active' if 'about' == page.fileSlug }}">
+                        <a href="" class="cs-li-link {{ 'cs-active' if 'photos' == page.fileSlug }}">
                             Photos
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="" class="cs-li-link {{ 'cs-active' if 'about' == page.fileSlug }}">
+                        <a href="" class="cs-li-link {{ 'cs-active' if 'contact' == page.fileSlug }}">
                            Contact 
                         </a>
                     </li>
